src/test/deca/syntax/invalid/ident_carac_interdit1.deca
//  Description :
//            Identificateur contenant un è
//
// Résultat:
//token recognition error at: 'è'
//
{
identièficateur
}